@@ -1,5 +1,8 @@
 
 ======================= Log Before Release =====================================
+2015-04-25:
+  * Add shellexec.wcc() to avoid blocking active R windows.
+
 2015-03-23:
   * Test with spmd.bcast.message().
 
